# lyrics-matcher

./: LICENSE  README.md  create_icon.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml  release.yml  version-tagger.yml
src/lyrics_matcher/: __init__.py  __main__.py  audio.py  gui.py  i18n.py  provider.py
src/lyrics_matcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_lyrics_matcher.py
